--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">RecyclerView</string>
+    <string name="app_name">Recycler_19VV5A0589</string>
+    <string name="on_april_27_2009_the_android_1_5_update_was_released_based_on_linux_kernel_2_6_27_44_45_this_was_the_first_release_to_officially_use_a_codename_based_on_a_dessert_item">On April 27, 2009, the Android 1.5 update was released, based on Linux kernel 2.6.27.[44][45] This was the first release to officially use a codename based on a dessert item (</string>
     <string-array name="imagetitles">
         <item>No Name</item>
         <item>Cupcake</item>
@@ -19,10 +20,8 @@
         <item>Q\n10.0</item>
 
 
-
-
     </string-array>
-    <string-array name="imageversions">
+    <string-array name="releasedate">
         <item>2009</item>
         <item>2009</item>
         <item>2009</item>
@@ -41,30 +40,26 @@
         <item>2019</item>
 
 
+    </string-array>
+
+    <string-array name="imageversions">
+        <item>1.1</item>
+        <item>1.5</item>
+        <item>1.6</item>
+        <item>2.0</item>
+        <item>2.2</item>
+        <item>2.3</item>
+        <item>3.0</item>
+        <item>4.0</item>
+        <item>4.1</item>
+        <item>4.4</item>
+        <item>5.0</item>
+        <item>6.0</item>
+        <item>7.0</item>
+        <item>8.0</item>
+        <item>9.0</item>
+        <item>10.0</item>
 
 
     </string-array>
-
-    <string-array name="releaseddate">
-    <item>1.0 </item>
-    <item>1.5</item>
-    <item>1.6</item>
-    <item>2.0</item>
-    <item>2.2</item>
-    <item>2.3</item>
-    <item>3.0</item>
-    <item>4.0</item>
-    <item>4.1</item>
-    <item>4.4</item>
-    <item>5.0</item>
-    <item>6.0</item>
-    <item>7.0</item>
-    <item>8.0</item>
-    <item>9.0</item>
-    <item>10.0</item>
-
-
-
-
-</string-array>
 </resources>
